--- a/data-science.html
+++ b/data-science.html
@@ -162,7 +162,7 @@ Sector.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://mention.workable.com/jobs/1073014'>Mention - Jobs: Senior Data Scientist - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mention.workable.com/jobs/1073014'>Mention - Jobs: Senior Data Scientist - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... Master's Degree in Data Sciences, Applied Mathematics, Machine Learning or 
 related; 3 to 5 years of experience in Data Sciences, ideally in a tech company?...</p>
@@ -189,17 +189,17 @@ delivering actionable insights on crop health directly to the field meaning farm
 <p><span class="badge badge-light">Berlin, DE</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bill/67c9fc2d-c236-46ee-9a2d-7c8958a6421b'>Bill.com - Lead Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bill/67c9fc2d-c236-46ee-9a2d-7c8958a6421b'>Bill.com - Lead Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... This position requires a person who has experience with developing machine 
 learning models and performing analytics preferably in risk domain.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nubank/jobs/1795226'>Job Application for Nubank - Data Scientist at Nubank</a></h5> 
+<h5><a href='https://boards.greenhouse.io/nubank/jobs/1795226'>Job Application for Nubank - Data Scientist at Nubank</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... About Nubank. Nubank is the leading financial technology company in Latin 
 America. Its first product, launched in 2014, is a no-fee credit card that is fully?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/goldenstatewarriors/jobs/1796132'>Job Application for Senior Data Scientist at GSW Sports, LLC</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/goldenstatewarriors/jobs/1796132'>Job Application for Senior Data Scientist at GSW Sports, LLC</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... The Golden State Warriors are looking for a savvy and innovative Senior Data 
 Scientist to join our growing Basketball Operations team. In this role, you will 
@@ -266,7 +266,7 @@ have?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/paylocity/2e41c6b2-7596-4fdf-9526-8d3c248de967'>Paylocity - Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/paylocity/2e41c6b2-7596-4fdf-9526-8d3c248de967'>Paylocity - Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Data Scientist. Remote - Tech. Technology: Product Development & Technology 
 ? Data Insights. Full-Time. Apply for this job. At Paylocity, we create software?...</p>
@@ -285,7 +285,7 @@ you to adverse treatment). Tubular Labs is a Government contractor subject to?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oFmCafwx'>The Climate Corporation Careers - Data Scientist - Big Data</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oFmCafwx'>The Climate Corporation Careers - Data Scientist - Big Data</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -379,11 +379,11 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wellhealthinc/jobs/4367501002'>Job Application for Data Scientist at WELL Health Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wellhealthinc/jobs/4367501002'>Job Application for Data Scientist at WELL Health Inc.</a></h5> 
 <p><span class="badge badge-light">Santa Barbara</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://fractalanalytics.applytojob.com/apply/fqUEsu3dQ7/Data-Scientist-China'>Data Scientist ,China - Fractal Analytics - Career Page</a></h5> 
+<h5><a href='http://fractalanalytics.applytojob.com/apply/fqUEsu3dQ7/Data-Scientist-China'>Data Scientist ,China - Fractal Analytics - Career Page</a></h5> 
 <p><span class="badge badge-light">Shanghai Shanghai, China</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -458,7 +458,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/viessmann/jobs/1785068'>Job Application for Data Scientist (m/w/d) at Viessmann Group</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/viessmann/jobs/1785068'>Job Application for Data Scientist (m/w/d) at Viessmann Group</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
